  - Most of the math functions are now inline.  
  - Add an option to stop a action animation at the end.
  - Add functions to rescale a core model, 
    but this can be done only before creating the CalModel.
  - Fix in the XML loader
  - Add a function to compute the global bounding box of the model.
  - Rename calculateBoundingBox to calculateBoundingBoxes.

o-----------------------------------------------------------------------------o
| Version 0.9.1 ( 29. November 2003) 
o-----------------------------------------------------------------------------o
  - Modifications to the loader to accomplish the 
    X axis (Y/Z) rotation from Keith Fulton <keith@paqrat.com>
  - Implementation of UV coord inversion from Keith Fulton  
  - Implemented loading from generic "data sources", which will allow the
    loading of Cal3d objects from istreams and memory buffers
  - Implementation of mesh morph targets from old_belge
  - Switched object constructors to use initializer lists for performance
    optimization
  - Implementation of Bounding Box calculations

o-----------------------------------------------------------------------------o
| Version 0.9 ( 6. August 2003)                                                 |
o-----------------------------------------------------------------------------o

  - Experimental tangent/texture space support (from the idea of 'Josh' code)
  - XML text file format
  - Tiny Xml is used for parsing XML file format
  - Update of the C wrapper
  - A tutorial and a FAQ
  - A better build system:
    Put all of libtool's m4 macros into Cal3D's acinclude.m4. This change
    allows us to be compatible with both older (2.13) and newer (2.5+)
    versions of autoconf.
    Added the autogen.sh script
  - Removed building of the "dummy app" because there is no need for it.
  - Added --with-cxx and --with-cc flags to force the use of a particular
    C/C++ compiler
  - Added functions to aid in dynamic motion programming :