@@ -40,6 +40,8 @@ protected:
   std::string m_name;
   std::string m_filename;
 
+  int m_referenceCount;
+
 // constructors/destructor
 public:
   CalCoreAnimation();
@@ -59,6 +61,8 @@ public:
   const std::string& getFilename(void);
   void setName(const std::string& name);
   const std::string& getName(void);
+  void incRef();
+  bool decRef();  
 };
 
 #endif
